[project]
name = "agnos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.4",
    "groq>=1.2.0",
    "ollama>=0.6.2",
    "openai>=2.33.0",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.24",
    "yfinance>=1.3.0",
]
